# aaronsolotravelplanner

./: README.md  env.example  hardhat.config.js  main.py  pyproject.toml  requirements.txt
contracts/: TravelLoyaltyToken.sol  TravelPaymentProcessor.sol  UnoLoyaltyToken.sol
game/: travel_manager_agent.py
scripts/: deploy.js
src/: __init__.py
src/blockchain/: contract_client.py  service_provider.py  token_registry.py
src/cdp_integration/: __init__.py  actions.py  agent.py  payment.py  wallet.py
src/game_agents/: __init__.py  functions.py  travel_agent.py  workers.py
src/modes/: __init__.py  automatic.py  blockchain_auto.py  blockchain_chat.py  blockchain_payments.py  interactive.py
src/utils/: __init__.py  logging.py  state.py
tests/: conftest.py
tests/integration/: test_blockchain_operations.py  test_travel_planning.py
tests/unit/: test_blockchain.py  test_cdp_integration.py  test_game_agents.py  test_modes.py  test_utils.py
